# services/AlbumService.js
@@ -1,6 +1,7 @@
 /* eslint-disable no-unused-vars */
 const Service = require('./Service');
 const db = require('../db');
+
 /**
 * Create album
 * Creates a new Album in the store
@@ -78,8 +79,6 @@ const listAlbums = ({ limit, offset }) => new Promise(
       const albums = await db.albums.find({}).skip(offset).limit(limit);
       const favorites = await db.favorites.find({});
       const albumsWithFavorites = albums.map(album => ({ ...album, favorites: favorites.find(favorite => album.userId === favorite.userId && album.id === favorite.albumId ) }))
-
-    
       resolve(Service.successResponse({
         limit,
         offset,
@@ -90,9 +89,31 @@ const listAlbums = ({ limit, offset }) => new Promise(
         e.message || 'Invalid input',
         e.status || 405,
       ));
- 
     }
-  }
+  },
+);
+/**
+* List favorites albums
+* List all albums with user access
+*
+* limit Integer maximum number of results to return (optional)
+* offset Integer offset from beginning of list (for pagination) (optional)
+* returns List
+* */
+const listFavoritesAlbums = ({ limit, offset }) => new Promise(
+  async (resolve, reject) => {
+    try {
+      resolve(Service.successResponse({
+        limit,
+        offset,
+      }));
+    } catch (e) {
+      reject(Service.rejectResponse(
+        e.message || 'Invalid input',
+        e.status || 405,
+      ));
+    }
+  },
 );
 /**
 * Update album
@@ -102,7 +123,7 @@ const listAlbums = ({ limit, offset }) => new Promise(
 * album Album Albums to add to the store
 * no response value expected for this operation
 * */
-const updatePetWithForm = ({ id, album }) => new Promise(
+const updateAlbum = ({ id, album }) => new Promise(
   async (resolve, reject) => {
     try {
       resolve(Service.successResponse({
@@ -123,5 +144,6 @@ module.exports = {
   deleteAlbum,
   findAlbumById,
   listAlbums,
-  updatePetWithForm,
+  listFavoritesAlbums,
+  updateAlbum,
 };
